# Haskell-AOC2022

./: Haskell-AOC2022.cabal
src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Utilities.hs
src/Gadgets/: IO.hs  Memoise.hs  Monad.hs
src/Gadgets/Array/ST/: Lazy.hs
