cabal-version:      2.4
name:               Haskell-AOC2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             mmzk1526
maintainer:         yc4120@ic.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Day1
    main-is:          Day1.hs
    other-modules:
        Gadgets.IO,
        Gadgets.Monad,
        Utilities
    other-extensions:
        OverloadedStrings
    build-depends:
        base ^>=4.14.3.0,
        text ^>=1.2.4.1,
        transformers ^>=0.5.6.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day2
    main-is:          Day2.hs
    other-modules:
        Gadgets.IO,
        Gadgets.Monad,
        Utilities
    build-depends:
        base ^>=4.14.3.0,
        text ^>=1.2.4.1,
        transformers ^>=0.5.6.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day3
    main-is:          Day3.hs
    other-modules:
        Gadgets.IO,
        Gadgets.Monad,
        Utilities
    build-depends:
        base ^>=4.14.3.0,
        text ^>=1.2.4.1,
        transformers ^>=0.5.6.2,
        containers ^>= 0.6.5.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day4
    main-is:          Day4.hs
    other-modules:
        Gadgets.IO,
        Gadgets.Monad,
        Utilities
    other-extensions:
        OverloadedStrings
    build-depends:
        base ^>=4.14.3.0,
        text ^>=1.2.4.1,
        transformers ^>=0.5.6.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day5
    main-is:          Day5.hs
    other-modules:
        Gadgets.Array,
        Gadgets.Array.Mutable,
        Gadgets.Array.ST,
        Gadgets.IO,
        Gadgets.Monad,
        Utilities
    other-extensions:
        OverloadedStrings
    build-depends:
        array ^>=0.5.4.0,
        base ^>=4.14.3.0,
        text ^>=1.2.4.1,
        transformers ^>=0.5.6.2,
        containers ^>=0.6.5.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day6
    main-is:          Day6.hs
    other-modules:
        Gadgets.Array,
        Gadgets.Array.Mutable,
        Gadgets.Array.ST,
        Gadgets.IO,
        Gadgets.Monad,
        Utilities
    other-extensions:
        OverloadedStrings
    build-depends:
        array ^>=0.5.4.0,
        base ^>=4.14.3.0,
        text ^>=1.2.4.1,
        transformers ^>=0.5.6.2,
        containers ^>=0.6.5.1
    hs-source-dirs:   src
    default-language: Haskell2010
